--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -29,10 +29,24 @@
   display: flex;
   justify-content: space-around;
   flex-direction: column;
-  
   cursor: pointer;
 
   span {
     border: 1px solid #f4f4f4;
   }
+
+  a {
+    display: flex;
+    
+  }
+
+
+}
+
+.lines {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 25px;
+  height: 25px;
 }
